--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -12,7 +12,7 @@
             <link href="JahjaMuratovicCV.css" type="text/css" rel="stylesheet" />
         </head>
 
-        <img src="img4.png" title="THE IMAGE" width=300 height=300 class="profileImage" id ="profileImage"/>
+        <img src="img4.jpeg" title="THE IMAGE" width=300 height=300 class="profileImage" id ="profileImage"/>
 
         <div class="nameSurnameDiv">
             <h1>Jahja Muratović</h1>
