--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-    <div class="CVMain" >
+    <div class="CVMain" style="background-color: white;" >
 
         <head>
             <title>
