--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -50,10 +50,6 @@
         </div>
 
         <p>
-            <b><u>Made for:</u></b> JobFAIR 2020.
-        </p>
-
-        <p>
             <u><b>IT skills & interests:</b></u><br>
             <ul>
                 <li>
@@ -71,6 +67,10 @@
                     by Andrew Ng Recently enrolled in the online course Deep Learning
                     by Andrew Ng and Angular & NodeJS - The MEAN Stack Guide by
                     Maximillian Schwarzmuller
+                </li>
+                <li>
+                    Recently have started learning basic Data Analytics
+                    and web scraping with R and RStudio
                 </li>
             </ul>
 
