--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -59,18 +59,18 @@
                 </li>
                 <li>
                     Have some basic knowledge of Android Application Development
-                    in Kotlin and Java using Android Studio (able to make some
-                    basic apps)
+                    in Kotlin and Java using Android Studio (made two apps)
                 </li>
                 <li>
                     Attended online coursera course AI for everyone
                     by Andrew Ng Recently enrolled in the online course Deep Learning
                     by Andrew Ng and Angular & NodeJS - The MEAN Stack Guide by
-                    Maximillian Schwarzmuller
+                    Maximillian Schwarzmuller, after that I impelemnted that knowledge
+                    and experience in mu university web developoment course.
                 </li>
                 <li>
-                    Recently have started learning basic Data Analytics
-                    and web scraping with R and RStudio
+                    Done a Data analysis project with
+                    web scraping with R and RStudio
                 </li>
             </ul>
 
