--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -112,7 +112,27 @@
             <u><b>Competitions & Projects:</b></u><br>
             <ul>
                 <li>
-                    Munja Bussiness Challenge 2017, a competition in enterpreneural ideas
+                    IUS student application
+                    Student android application I started developing in Kotlin which uses web scraping for retrieving 
+                    student data from the main IUS student system site. It has some simple UI for now, it is in ver.
+                    0.1 and available to download from my GitHub profile.
+                </li>
+                <li>
+                    Mobile.de and Olx.ba Data Analysis 
+                    It is a project made possible with R and RStudio, firstly I scraped the data from mobile.de and
+                    Olx.ba after that i cleaned the data as much as I could, then I started drawing graphs and maps
+                    based on the postal codes of cars, after that I started writing conclusions based on the available
+                    data. The scripts, the work, and the maps are available on my GitHub Profile.
+                </li>
+                <li>
+                    A basic High School website
+                    Written in Javascript and Typescript for the backedn and frontend respectively, it is my first
+                    web development project, it features some basic Express Node.js backend and Angular Fronted
+                    while using MongoDB as the database. The whole project is available on my GitHub repo.
+                </li>
+                <li>
+                    Munja Bussiness Challenge 2017 
+                    A competition in enterpreneural ideas, designing a bussiness plan and presenting it in front of a board.
                 </li>
                 <li>
                     IT Challenge Maglaj 2017 & 2018
@@ -121,16 +141,7 @@
                     Projekt GRAĐANIN-Odlazak mladih iz BiH as one of key leaders
                 </li>
                 <li>
-                    Spelling Bee Mostar 2016
-                </li>
-                <li>
                     Dabar Informatičar 2018
-                </li>
-                <li>
-                    Mak Dizdar poetry night 2018 as the main reciter
-                </li>
-                <li>
-                    A small basic A1 Arabic video course 2019
                 </li>
             </ul>
             <br>
