--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -112,23 +112,25 @@
             <u><b>Competitions & Projects:</b></u><br>
             <ul>
                 <li>
-                    IUS student application
-                    Student android application I started developing in Kotlin which uses web scraping for retrieving 
-                    student data from the main IUS student system site. It has some simple UI for now, it is in ver.
-                    0.1 and available to download from my GitHub profile.
+                    IUS student application <br>
+                    <i>Project Description: </i>Student android application I started developing in Kotlin which 
+                    uses web scraping for retrieving student data from the main IUS student system site. It has
+                    some simple UI for now, it is in ver. 0.1 and available to download from my GitHub profile.
                 </li>
                 <li>
-                    Mobile.de and Olx.ba Data Analysis 
-                    It is a project made possible with R and RStudio, firstly I scraped the data from mobile.de and
-                    Olx.ba after that i cleaned the data as much as I could, then I started drawing graphs and maps
-                    based on the postal codes of cars, after that I started writing conclusions based on the available
-                    data. The scripts, the work, and the maps are available on my GitHub Profile.
+                    Mobile.de and Olx.ba Data Analysis <br>
+                    <i>Project Description: </i>It is a project made possible with R and RStudio, firstly I scraped
+                    the data from mobile.de and Olx.ba after that i cleaned the data as much as I could, then I 
+                    started drawing graphs and maps based on the postal codes of cars, after that I started writing
+                    conclusions based on the available data. The scripts, the work, and the maps are available on 
+                    my GitHub Profile.
                 </li>
                 <li>
-                    A basic High School website
-                    Written in Javascript and Typescript for the backedn and frontend respectively, it is my first
-                    web development project, it features some basic Express Node.js backend and Angular Fronted
-                    while using MongoDB as the database. The whole project is available on my GitHub repo.
+                    A basic High School website <br>
+                    <i>Project Description: </i>Written in Javascript and Typescript for the backedn and frontend
+                    respectively, it is my first web development project, it features some basic Express Node.js
+                    backend and Angular Fronted while using MongoDB as the database. The whole project is available
+                    on my GitHub profile.
                 </li>
                 <li>
                     Munja Bussiness Challenge 2017 
