--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -113,24 +113,30 @@
             <ul>
                 <li>
                     IUS student application <br>
-                    <i>Project Description: </i>Student android application I started developing in Kotlin which 
-                    uses web scraping for retrieving student data from the main IUS student system site. It has
-                    some simple UI for now, it is in ver. 0.1 and available to download from my GitHub profile.
+                    <i>Project Description: </i> Firstly, I was very unsatisfied with the current IUS student 
+                    system in the termns of UI and UX so I figured out that I could make a Kotlin script that
+                    uses Jsoup to log in and scrape the grades and University course schedules for me, and after
+                    that my goal was to present the student info in a most user friendly way. I started 
+                    developing it in Kotlin and Android Studio for retrieving student data from the main IUS
+                    student system site. It has some simple UI for now, it is in ver. 0.1 and available for 
+                    download from my GitHub profile.
                 </li>
                 <li>
                     Mobile.de and Olx.ba Data Analysis <br>
                     <i>Project Description: </i>It is a project made possible with R and RStudio, firstly I scraped
-                    the data from mobile.de and Olx.ba after that i cleaned the data as much as I could, then I 
+                    the data from mobile.de and Olx.ba after that I cleaned the data as much as I could, then I 
                     started drawing graphs and maps based on the postal codes of cars, after that I started writing
-                    conclusions based on the available data. The scripts, the work, and the maps are available on 
+                    conclusions based on the available data. The subject of Analysis were comparison of Bosnian and
+                    German markets by analysing price, mileage and car feature differences of Mercedes E-Classes
+                    Available on Mobile.de and on Olx.ba. The scripts, the work, and the maps are available on 
                     my GitHub Profile.
                 </li>
                 <li>
-                    A basic High School website <br>
+                    A MEAN High School website <br>
                     <i>Project Description: </i>Written in Javascript and Typescript for the backedn and frontend
                     respectively, it is my first web development project, it features some basic Express Node.js
-                    backend and Angular Fronted while using MongoDB as the database. The whole project is available
-                    on my GitHub profile.
+                    backend with rest API and with token authentification and Angular Fronted while using MongoDB
+                    as the database. The whole project is available on my GitHub profile.
                 </li>
                 <li>
                     Munja Bussiness Challenge 2017 
