--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -68,10 +68,6 @@
                     Maximillian Schwarzmuller, after that I impelemnted that knowledge
                     and experience in mu university web developoment course.
                 </li>
-                <li>
-                    Done a Data analysis project with
-                    web scraping with R and RStudio
-                </li>
             </ul>
 
 
@@ -137,6 +133,12 @@
                     respectively, it is my first web development project, it features some basic Express Node.js
                     backend with rest API and with token authentification and Angular Fronted while using MongoDB
                     as the database. The whole project is available on my GitHub profile.
+                </li>
+                <li>
+                    A Note taking takin Node.js project <br>
+                    <i>Project Description: </i>Written in Node.js and Express it features html template rendering
+                    without a traditional Frontend like Angular or React, wrote it in order to explore the MVC
+                    architecture and the way the web worked more than 10 years ago.
                 </li>
                 <li>
                     Munja Bussiness Challenge 2017 
