--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -141,8 +141,9 @@
                     architecture and the way the web worked more than 10 years ago.
                 </li>
                 <li>
-                    Munja Bussiness Challenge 2017 
-                    A competition in enterpreneural ideas, designing a bussiness plan and presenting it in front of a board.
+                    Munja Bussiness Challenge 2017 <br>
+                    <i>Project Description: </i>A competition in enterpreneural ideas, designing a bussiness plan
+                    and presenting it in front of a board.
                 </li>
                 <li>
                     IT Challenge Maglaj 2017 & 2018
