--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -41,7 +41,8 @@
         
         <div class="shortInfo">
             <h5>A Third-year undergraduate student looking for
-                some entry-level position or an internship.</h5>
+                some entry-level position or an internship, 
+                eager to learn new technologies and languages</h5>
         </div>
 
         <div class="buttons">
@@ -110,8 +111,8 @@
                 <li>
                     IUS student application <br>
                     <i>Project Description: </i> Firstly, I was very unsatisfied with the current IUS student 
-                    system in the termns of UI and UX so I figured out that I could make a Kotlin script that
-                    uses Jsoup to log in and scrape the grades and University course schedules for me, and after
+                    system in the terms of UI and UX so I figured out that I could make a Kotlin script that
+                    uses JSoup to log in and scrape the grades and University course schedules for me, and after
                     that my goal was to present the student info in a most user friendly way. I started 
                     developing it in Kotlin and Android Studio for retrieving student data from the main IUS
                     student system site. It has some simple UI for now, it is in ver. 0.1 and available for 
@@ -129,13 +130,13 @@
                 </li>
                 <li>
                     A MEAN High School website <br>
-                    <i>Project Description: </i>Written in Javascript and Typescript for the backedn and frontend
+                    <i>Project Description: </i>Written in Javascript and Typescript for the backend and frontend
                     respectively, it is my first web development project, it features some basic Express Node.js
                     backend with rest API and with token authentification and Angular Fronted while using MongoDB
                     as the database. The whole project is available on my GitHub profile.
                 </li>
                 <li>
-                    A Note taking takin Node.js project <br>
+                    A Note taking Node.js project <br>
                     <i>Project Description: </i>Written in Node.js and Express it features html template rendering
                     without a traditional Frontend like Angular or React, wrote it in order to explore the MVC
                     architecture and the way the web worked more than 10 years ago.
