--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -54,20 +54,18 @@
             <u><b>IT skills & interests:</b></u><br>
             <ul>
                 <li>
-                    Attended one semester of basic C++, one semester of
-                    object-oriented programming in Java, one semester of
-                    probability and statistics and two semesters of discrete math
+                    Basic understanding of C++, Java, JavaScript, working knowledge 
+                    of Kotlin and R
                 </li>
                 <li>
-                    Have some basic knowledge of Android Application Development
+                    Basic knowledge of Android Application Development
                     in Kotlin and Java using Android Studio (made two apps)
                 </li>
                 <li>
-                    Attended online coursera course AI for everyone
-                    by Andrew Ng Recently enrolled in the online course Deep Learning
-                    by Andrew Ng and Angular & NodeJS - The MEAN Stack Guide by
-                    Maximillian Schwarzmuller, after that I impelemnted that knowledge
-                    and experience in mu university web developoment course.
+                    Basic knowledge of Data Anayisis and web scraping
+                </li>
+                <li>
+                    Basic understanding of MEAN stack web frameworks
                 </li>
             </ul>
 
@@ -109,7 +107,7 @@
             <u><b>Competitions & Projects:</b></u><br>
             <ul>
                 <li>
-                    IUS student application <br>
+                    <b>IUS student application <br></b>
                     <i>Project Description: </i> Firstly, I was very unsatisfied with the current IUS student 
                     system in the terms of UI and UX so I figured out that I could make a Kotlin script that
                     uses JSoup to log in and scrape the grades and University course schedules for me, and after
@@ -119,7 +117,7 @@
                     download from my GitHub profile.
                 </li>
                 <li>
-                    Mobile.de and Olx.ba Data Analysis <br>
+                    <b>Mobile.de and Olx.ba Data Analysis <br></b>
                     <i>Project Description: </i>It is a project made possible with R and RStudio, firstly I scraped
                     the data from mobile.de and Olx.ba after that I cleaned the data as much as I could, then I 
                     started drawing graphs and maps based on the postal codes of cars, after that I started writing
@@ -129,31 +127,31 @@
                     my GitHub Profile.
                 </li>
                 <li>
-                    A MEAN High School website <br>
+                    <b>A MEAN High School website <br></b>
                     <i>Project Description: </i>Written in Javascript and Typescript for the backend and frontend
                     respectively, it is my first web development project, it features some basic Express Node.js
                     backend with rest API and with token authentification and Angular Fronted while using MongoDB
                     as the database. The whole project is available on my GitHub profile.
                 </li>
                 <li>
-                    A Note taking Node.js project <br>
+                    <b>A Note taking Node.js project <br></b>
                     <i>Project Description: </i>Written in Node.js and Express it features html template rendering
                     without a traditional Frontend like Angular or React, wrote it in order to explore the MVC
                     architecture and the way the web worked more than 10 years ago.
                 </li>
                 <li>
-                    Munja Bussiness Challenge 2017 <br>
+                    <b>Munja Bussiness Challenge 2017 <br></b>
                     <i>Project Description: </i>A competition in enterpreneural ideas, designing a bussiness plan
                     and presenting it in front of a board.
                 </li>
                 <li>
-                    IT Challenge Maglaj 2017 & 2018
+                    <b>IT Challenge Maglaj 2017 & 2018</b>
                 </li>
                 <li>
-                    Projekt GRAĐANIN-Odlazak mladih iz BiH as one of key leaders
+                    <b>Projekt GRAĐANIN-Odlazak mladih iz BiH as one of key leaders</b>
                 </li>
                 <li>
-                    Dabar Informatičar 2018
+                    <b>Dabar Informatičar 2018</b>
                 </li>
             </ul>
             <br>
