--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -54,15 +54,17 @@
             <u><b>IT skills & interests:</b></u><br>
             <ul>
                 <li>
-                    Basic understanding of C++, Java, JavaScript, working knowledge 
-                    of Kotlin and R
+                    Basic understanding of C++, Java, JavaScript
                 </li>
                 <li>
-                    Basic knowledge of Android Application Development
+                    Working knowledge of Kotlin and R
+                </li>
+                <li>
+                    Knowledge of Android Application Development
                     in Kotlin and Java using Android Studio (made two apps)
                 </li>
                 <li>
-                    Basic knowledge of Data Anayisis and web scraping
+                    Some experience Data Anayisis and web scraping
                 </li>
                 <li>
                     Basic understanding of MEAN stack web frameworks
