Added some major chances to the cv.

--- a/pdfver.html
+++ b/pdfver.html
@@ -1,74 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" media="screen and (max-device-width: 600px)"
-        href="JahjaMuratovicCVMobile.css" />
-    <link rel="stylesheet" href="JahjaMuratovicCV.css" media="screen and (min-device-width: 600px)">
-    <title>Jahja Muratovic CV</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="JahjaMuratovicCV.css">
+  <script src="JahjaMuratovicCV.js" defer></script>
+  <title>Document</title>
 </head>
-
-<body>
-    <div class="CVMain" style="background-color: white;">
+<body style="background-image: none;">
+    <div class="CVMain" style="background-color: white;" >
 
         <head>
             <title>
                 Jahja Muratovic CV
             </title>
+
         </head>
 
-        <img src="img4.jpeg" class="profileImage" id="profileImage" />
+        <img src="img4.jpeg" title="THE IMAGE" width=300 height=300 class="profileImage" id ="profileImage"/>
 
         <div class="nameSurnameDiv">
             <h1>Jahja Muratović</h1>
         </div>
 
         <div class="contactInfo">
-            <p>
-            <p>
-                Birthdate: <br class="infoBr"> 05.03.2000
-            </p>
-            <p>
-                Address: <br class="infoBr"> Kovačuša 3/3, 70230 Bugojno, BiH
-            </p>
-            <p>
-                Mobile: <br class="infoBr"> +387 63 581 058
-            </p>
-            <p>
-                Email: <br class="infoBr"> muratow_nur@hotmail.com
-            </p>
+            <p>Birthdate: 05.03.2000 <br>
+                Address: Kovačuša 3/3, 70230 Bugojno, BiH <br>
+                Mobile: +387 63 581 058 <br>
+                Email: muratow_nur@hotmail.com <br>
+                LinkedIn: https://www.linkedin.com/in/jahja-muratovic/ <br>
+                University: International University of Sarajevo <br>
+                GitHub: https://github.com/Afrolone <br>
             </p>
         </div>
 
         <br>
-
+        
         <div class="shortInfo">
             <h5>A Third-year undergraduate student looking for
-                some entry-level position or an internship,<br>
+                some entry-level position or an internship,<br> 
                 eager to learn new technologies and languages</h5>
         </div>
 
-        <div class="buttons">
-            <a href="https://github.com/Afrolone" title="GitHub" alt="GitHub">
-                <img class="infoIcon" src="gitHub.png">
-            </a>
-            <a href="https://cs.ius.edu.ba/" title="IUS Computer Science" alt="IUS Computer Science">
-                <img class="infoIcon" src="school.png">
-            </a>
-            <a href="https://www.linkedin.com/in/jahja-muratovic/" title="LinkedIn" alt="LinkedIn">
-                <img class="infoIcon" src="ld.png">
-            </a>
-            <a href="mailto: muratow_nur@hotmail.com" title="Mail me" alt="Mail me">
-                <img class="infoIcon" src="mail.png">
-            </a>
-        </div>
-
-        <div class = "mainContent">
-            <p>
-                <u><b>IT skills & interests:</b></u><br>
+        <p>
+            <u><b>IT skills & interests:</b></u><br>
             <ul>
                 <li>
                     Basic understanding of C++, Java, JavaScript
@@ -89,10 +65,10 @@
             </ul>
 
 
-            </p>
+        </p>
 
-            <p>
-                <u><b>Work Experience:</b></u><br>
+        <p>
+            <u><b>Work Experience:</b></u><br>
             <ul>
                 <li>
                     <b>Sales Clerk (2014-2018)</b> at wholesale store Nur-export d.o.o <br>
@@ -111,10 +87,10 @@
                     my skills in salesmanship and human relations<br>
                 </li>
             </ul>
-            </p>
+        </p>
 
-            <p>
-                <u><b>Education:</b></u><br>
+        <p>
+            <u><b>Education:</b></u><br>
             <ul>
                 <li>
                     International University of Sarajevo (2018-2022), Computer Science
@@ -127,22 +103,22 @@
             <ul>
                 <li>
                     <b>IUS student application <br></b>
-                    <i>Project Description: </i> Firstly, I was very unsatisfied with the current IUS student
+                    <i>Project Description: </i> Firstly, I was very unsatisfied with the current IUS student 
                     system in the terms of UI and UX so I figured out that I could make a Kotlin script that
                     uses JSoup to log in and scrape the grades and University course schedules for me, and after
-                    that my goal was to present the student info in a most user friendly way. I started
+                    that my goal was to present the student info in a most user friendly way. I started 
                     developing it in Kotlin and Android Studio for retrieving student data from the main IUS
-                    student system site. It has some simple UI for now, it is in ver. 0.1 and available for
+                    student system site. It has some simple UI for now, it is in ver. 0.1 and available for 
                     download from my GitHub profile.
                 </li>
                 <li>
                     <b>Mobile.de and Olx.ba Data Analysis <br></b>
                     <i>Project Description: </i>It is a project made possible with R and RStudio, firstly I scraped
-                    the data from mobile.de and Olx.ba after that I cleaned the data as much as I could, then I
+                    the data from mobile.de and Olx.ba after that I cleaned the data as much as I could, then I 
                     started drawing graphs and maps based on the postal codes of cars, after that I started writing
                     conclusions based on the available data. The subject of Analysis were comparison of Bosnian and
                     German markets by analysing price, mileage and car feature differences of Mercedes E-Classes
-                    Available on Mobile.de and on Olx.ba. The scripts, the work, and the maps are available on
+                    Available on Mobile.de and on Olx.ba. The scripts, the work, and the maps are available on 
                     my GitHub Profile.
                 </li>
                 <li>
@@ -174,12 +150,9 @@
                 </li>
             </ul>
             <br>
-            </p>
-        </div>
+        </p>
     </div>
 </body>
 
-<script src="JahjaMuratovicCV.js">
-</script>
 
 </html>
