--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -48,7 +48,7 @@
         <div class="shortInfo">
             <h5>A Third-year undergraduate student looking for
                 some entry-level position or an internship,<br>
-                eager to learn new technologies and languages</h5>
+                eager to learn new technologies and languages.</h5>
         </div>
 
         <div class="buttons">
