Updated the cv.

--- a/JahjaMuratovicCV.html
+++ b/JahjaMuratovicCV.html
@@ -71,20 +71,20 @@
                 <u><b>IT skills & interests:</b></u><br>
             <ul>
                 <li>
-                    Basic understanding of C++, Java, JavaScript
+                    Basic knowledge of C++, Java, JavaScript, Python
                 </li>
                 <li>
                     Working knowledge of Kotlin and R
                 </li>
                 <li>
                     Knowledge of Android Application Development
-                    in Kotlin and Java using Android Studio (made two apps)
+                    in Kotlin and Java using Android Studio
                 </li>
                 <li>
-                    Some experience of Data Anayisis and web scraping
+                    Some experience in Data Anayisis and web scraping
                 </li>
                 <li>
-                    Basic understanding of MEAN stack web frameworks
+                    Django Rest Framework and MEAN stack
                 </li>
             </ul>
 
@@ -127,23 +127,26 @@
             <ul>
                 <li>
                     <b>IUS student application <br></b>
-                    <i>Project Description: </i> Firstly, I was very unsatisfied with the current IUS student
-                    system in the terms of UI and UX so I figured out that I could make a Kotlin script that
-                    uses JSoup to log in and scrape the grades and University course schedules for me, and after
-                    that my goal was to present the student info in a most user friendly way. I started
-                    developing it in Kotlin and Android Studio for retrieving student data from the main IUS
-                    student system site. It has some simple UI for now, it is in ver. 0.1 and available for
-                    download from my GitHub profile.
+                    <i>Project Description: </i> It as an Android app that uses JSoup to log in to the IUS webpage
+                    with user-provided credentials and to scrape the specific user data, then it takes the data and
+                    presents it in a more practical and more user friendly way. It it written in Kotlin and can be
+                    checked out and downloaded on my GitHub profile.
                 </li>
                 <li>
                     <b>Mobile.de and Olx.ba Data Analysis <br></b>
-                    <i>Project Description: </i>It is a project made possible with R and RStudio, firstly I scraped
+                    <i>Project Description: </i>It is a project done in R and RStudio, firstly I scraped
                     the data from mobile.de and Olx.ba after that I cleaned the data as much as I could, then I
                     started drawing graphs and maps based on the postal codes of cars, after that I started writing
                     conclusions based on the available data. The subject of Analysis were comparison of Bosnian and
                     German markets by analysing price, mileage and car feature differences of Mercedes E-Classes
                     Available on Mobile.de and on Olx.ba. The scripts, the work, and the maps are available on
                     my GitHub Profile.
+                </li>
+                <li>
+                    <b>Django REST backend <br></b>
+                    <i>Project Description: </i> A backend written in Django REST Framework, featuring session
+                    tokens, user email verification, password reset with email, only authorized access to some
+                    API endpoints.
                 </li>
                 <li>
                     <b>A MEAN High School website <br></b>
