--- a/pdfver.html
+++ b/pdfver.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="JahjaMuratovicCV.css">
-  <script src="JahjaMuratovicCV.js" defer></script>
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="JahjaMuratovicCV.css">
+    <script src="JahjaMuratovicCV.js" defer></script>
+    <title>Document</title>
 </head>
+
 <body style="background-image: none;">
-    <div class="CVMain" style="background-color: white;" >
+    <div class="CVMain" style="background-color: white;">
 
         <head>
             <title>
@@ -18,7 +20,7 @@
 
         </head>
 
-        <img src="img4.jpeg" title="THE IMAGE" width=300 height=300 class="profileImage" id ="profileImage"/>
+        <img src="img4.jpeg" title="THE IMAGE" width=300 height=300 class="profileImage" id="profileImage" />
 
         <div class="nameSurnameDiv">
             <h1>Jahja Muratović</h1>
@@ -36,120 +38,123 @@
         </div>
 
         <br>
-        
+
         <div class="shortInfo">
             <h5>A Third-year undergraduate student looking for
-                some entry-level position or an internship,<br> 
+                some entry-level position or an internship,<br>
                 eager to learn new technologies and languages</h5>
         </div>
 
         <p>
             <u><b>IT skills & interests:</b></u><br>
-            <ul>
-                <li>
-                    Basic understanding of C++, Java, JavaScript
-                </li>
-                <li>
-                    Working knowledge of Kotlin and R
-                </li>
-                <li>
-                    Knowledge of Android Application Development
-                    in Kotlin and Java using Android Studio (made two apps)
-                </li>
-                <li>
-                    Some experience of Data Anayisis and web scraping
-                </li>
-                <li>
-                    Basic understanding of MEAN stack web frameworks
-                </li>
-            </ul>
+        <ul>
+            <li>
+                Basic knowledge of C++, Java, JavaScript, Python
+            </li>
+            <li>
+                Working knowledge of Kotlin and R
+            </li>
+            <li>
+                Knowledge of Android Application Development
+                in Kotlin and Java using Android Studio
+            </li>
+            <li>
+                Some experience in Data Anayisis and web scraping
+            </li>
+            <li>
+                Django Rest Framework and MEAN stack
+            </li>
+        </ul>
 
 
         </p>
 
         <p>
             <u><b>Work Experience:</b></u><br>
-            <ul>
-                <li>
-                    <b>Sales Clerk (2014-2018)</b> at wholesale store Nur-export d.o.o <br>
-                    <i>Job description:</i>
-                    Working at the cash register making sure that
-                    all the fiscal bills are right, serving the customers myself
-                    and making sure they get what they need and want, instructing
-                    the coworkers where to properly store the merchandise which
-                    comes into the store etc. <br>
-                </li>
-                <li>
-                    <b>Travelling Salesman (2018-2020)</b> at Nur-Export d.o.o. <br>
-                    <i>Job description: </i>
-                    As soon as I got the driving license, started working for the
-                    same company as a travelling salesman, making orders an honing
-                    my skills in salesmanship and human relations<br>
-                </li>
-            </ul>
+        <ul>
+            <li>
+                <b>Sales Clerk (2014-2018)</b> at wholesale store Nur-export d.o.o <br>
+                <i>Job description:</i>
+                Working at the cash register making sure that
+                all the fiscal bills are right, serving the customers myself
+                and making sure they get what they need and want, instructing
+                the coworkers where to properly store the merchandise which
+                comes into the store etc. <br>
+            </li>
+            <li>
+                <b>Travelling Salesman (2018-2020)</b> at Nur-Export d.o.o. <br>
+                <i>Job description: </i>
+                As soon as I got the driving license, started working for the
+                same company as a travelling salesman, making orders an honing
+                my skills in salesmanship and human relations<br>
+            </li>
+        </ul>
         </p>
 
         <p>
             <u><b>Education:</b></u><br>
-            <ul>
-                <li>
-                    International University of Sarajevo (2018-2022), Computer Science
-                </li>
-                <li>
-                    Gimnazija Bugojno (2014-2018) <br>
-                </li>
-            </ul>
-            <u><b>Competitions & Projects:</b></u><br>
-            <ul>
-                <li>
-                    <b>IUS student application <br></b>
-                    <i>Project Description: </i> Firstly, I was very unsatisfied with the current IUS student 
-                    system in the terms of UI and UX so I figured out that I could make a Kotlin script that
-                    uses JSoup to log in and scrape the grades and University course schedules for me, and after
-                    that my goal was to present the student info in a most user friendly way. I started 
-                    developing it in Kotlin and Android Studio for retrieving student data from the main IUS
-                    student system site. It has some simple UI for now, it is in ver. 0.1 and available for 
-                    download from my GitHub profile.
-                </li>
-                <li>
-                    <b>Mobile.de and Olx.ba Data Analysis <br></b>
-                    <i>Project Description: </i>It is a project made possible with R and RStudio, firstly I scraped
-                    the data from mobile.de and Olx.ba after that I cleaned the data as much as I could, then I 
-                    started drawing graphs and maps based on the postal codes of cars, after that I started writing
-                    conclusions based on the available data. The subject of Analysis were comparison of Bosnian and
-                    German markets by analysing price, mileage and car feature differences of Mercedes E-Classes
-                    Available on Mobile.de and on Olx.ba. The scripts, the work, and the maps are available on 
-                    my GitHub Profile.
-                </li>
-                <li>
-                    <b>A MEAN High School website <br></b>
-                    <i>Project Description: </i>Written in Javascript and Typescript for the backend and frontend
-                    respectively, it is my first web development project, it features some basic Express Node.js
-                    backend with rest API and with token authentification and Angular Fronted while using MongoDB
-                    as the database. The whole project is available on my GitHub profile.
-                </li>
-                <li>
-                    <b>A Note taking Node.js project <br></b>
-                    <i>Project Description: </i>Written in Node.js and Express it features html template rendering
-                    without a traditional Frontend like Angular or React, wrote it in order to explore the MVC
-                    architecture and the way the web worked more than 10 years ago.
-                </li>
-                <li>
-                    <b>Munja Bussiness Challenge 2017 <br></b>
-                    <i>Project Description: </i>A competition in enterpreneural ideas, designing a bussiness plan
-                    and presenting it in front of a board.
-                </li>
-                <li>
-                    <b>IT Challenge Maglaj 2017 & 2018</b>
-                </li>
-                <li>
-                    <b>Projekt GRAĐANIN-Odlazak mladih iz BiH as one of key leaders</b>
-                </li>
-                <li>
-                    <b>Dabar Informatičar 2018</b>
-                </li>
-            </ul>
-            <br>
+        <ul>
+            <li>
+                International University of Sarajevo (2018-2022), Computer Science
+            </li>
+            <li>
+                Gimnazija Bugojno (2014-2018) <br>
+            </li>
+        </ul>
+        <u><b>Competitions & Projects:</b></u><br>
+        <ul>
+            <li>
+                <b>IUS student application <br></b>
+                <i>Project Description: </i> It as an Android app that uses JSoup to log in to the IUS webpage
+                with user-provided credentials and to scrape the specific user data, then it takes the data and
+                presents it in a more practical and more user friendly way. It it written in Kotlin and can be
+                checked out and downloaded on my GitHub profile.
+            </li>
+            <li>
+                <b>Mobile.de and Olx.ba Data Analysis <br></b>
+                <i>Project Description: </i>It is a project done in R and RStudio, firstly I scraped
+                the data from mobile.de and Olx.ba after that I cleaned the data as much as I could, then I
+                started drawing graphs and maps based on the postal codes of cars, after that I started writing
+                conclusions based on the available data. The subject of Analysis were comparison of Bosnian and
+                German markets by analysing price, mileage and car feature differences of Mercedes E-Classes
+                Available on Mobile.de and on Olx.ba. The scripts, the work, and the maps are available on
+                my GitHub Profile.
+            </li>
+            <li>
+                <b>Django REST backend <br></b>
+                <i>Project Description: </i> A backend written in Django REST Framework, featuring session
+                tokens, user email verification, password reset with email, only authorized access to some
+                API endpoints.
+            </li>
+            <li>
+                <b>A MEAN High School website <br></b>
+                <i>Project Description: </i>Written in Javascript and Typescript for the backend and frontend
+                respectively, it is my first web development project, it features some basic Express Node.js
+                backend with rest API and with token authentification and Angular Fronted while using MongoDB
+                as the database. The whole project is available on my GitHub profile.
+            </li>
+            <li>
+                <b>A Note taking Node.js project <br></b>
+                <i>Project Description: </i>Written in Node.js and Express it features html template rendering
+                without a traditional Frontend like Angular or React, wrote it in order to explore the MVC
+                architecture and the way the web worked more than 10 years ago.
+            </li>
+            <li>
+                <b>Munja Bussiness Challenge 2017 <br></b>
+                <i>Project Description: </i>A competition in enterpreneural ideas, designing a bussiness plan
+                and presenting it in front of a board.
+            </li>
+            <li>
+                <b>IT Challenge Maglaj 2017 & 2018</b>
+            </li>
+            <li>
+                <b>Projekt GRAĐANIN-Odlazak mladih iz BiH as one of key leaders</b>
+            </li>
+            <li>
+                <b>Dabar Informatičar 2018</b>
+            </li>
+        </ul>
+        <br>
         </p>
     </div>
 </body>
